--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
         content a:hover {
             text-decoration: underline;
         }
+
+#refreshButton {
+  background-color: #4CAF50; /* Colore di sfondo verde */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+#refreshButton:hover {
+  background-color: #45a049; /* Cambia il colore di sfondo quando passi sopra con il mouse */
+            }
+        
     </style>
 </head>
 <body>
@@ -154,6 +173,7 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
+        <button id="refreshButton">Refresh</button>
     </div>
 </div>
 
