--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
-        <button id="refreshButton">Refresh</button>
+        <button id="refreshButton"onclick="location.reload()">Refresh</button>
     </div>
 </div>
 
