--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         }
 
 #refreshButton {
-  background-color: #4CAF50; /* Colore di sfondo verde */
+  background-color: #af4c4c; /* Colore di sfondo verde */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -161,7 +161,7 @@
 }
 
 #refreshButton:hover {
-  background-color: #45a049; /* Cambia il colore di sfondo quando passi sopra con il mouse */
+  background-color: #af4c4c; /* Cambia il colore di sfondo quando passi sopra con il mouse */
             }
         
     </style>
