--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
-        <button id="refreshButton"onclick="location.reload()">Refresh</button>
+        <button id="refreshButton"onclick="location.reload()"><img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Refresh_icon.png" alt="Icona di aggiornamento">
+</button>
     </div>
 </div>
 
