--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   background-color: #af4c4c; /* Colore di sfondo verde */
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 15px; /* Adjust padding for smaller size */
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -158,6 +158,8 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 8px;
+  width: 30px; /* Set desired width */
+  height: 30px; /* Set desired height */
 }
 
 #refreshButton:hover {
