--- a/index.html
+++ b/index.html
@@ -151,16 +151,8 @@
   border: none;
   color: white;
   padding: 10px 15px; /* Adjust padding for smaller size */
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
 
-#refreshButton:hover {
-  background-color: #af4c4c; /* Cambia il colore di sfondo quando passi sopra con il mouse */
+ /* Cambia il colore di sfondo quando passi sopra con il mouse */
             }
         
     </style>
