--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
         content a:hover {
             text-decoration: underline;
         }
+
+
+        #aggiorna {
+  font-size: 24px;
+  cursor: pointer;
+  color: #0073b7;
+  transition: 0.2s;
+}
+
+#aggiorna:hover {
+  color: #005797;
+}
         
     </style>
 </head>
@@ -155,7 +167,7 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
-        <button id="refreshButton"onclick="location.reload()"><p>⟳</p>>
+          <span id="aggiorna" onclick="location.reload()">⟳</span>
 </button>
     </div>
 </div>
