--- a/index.html
+++ b/index.html
@@ -188,7 +188,22 @@
 </header>
   
   
-  
+  <table>
+  <tr>
+    <th>Colonna 1</th>
+    <th>Colonna 2</th>
+  </tr>
+  <tr>
+    <td>Contenuto riga 1, colonna 1</td>
+    <td>Contenuto riga 1, colonna 2</td>
+  </tr>
+  <tr>
+    <td>Contenuto riga 2, colonna 1</td>
+    <td>Contenuto riga 2, colonna 2</td>
+  </tr>
+  </table>
+
+    
 <footer>
     <div class="container">
         <div>
