--- a/index.html
+++ b/index.html
@@ -171,6 +171,20 @@
 </button>
     </div>
 </div>
+<table>
+  <tr>
+    <th>Colonna 1</th>
+    <th>Colonna 2</th>
+  </tr>
+  <tr>
+    <td>Contenuto riga 1, colonna 1</td>
+    <td>Contenuto riga 1, colonna 2</td>
+  </tr>
+  <tr>
+    <td>Contenuto riga 2, colonna 1</td>
+    <td>Contenuto riga 2, colonna 2</td>
+  </tr>
+</table>
 
 <header>
     <div class="container">
