--- a/index.html
+++ b/index.html
@@ -189,11 +189,21 @@
 </header>
   <table>
   <tr>
-    <th>Colonna 1</th>
-    <th>Colonna 2</th>
+    <th>Scuola</th>
+    <th>PL</th>
   </tr>
   <tr>
-    <td>Contenuto riga 1, colonna 1</td>
+    <td>
+                    <li><a href="https://www.bsmart.it/" target="_blank">Bsmart</a></li>
+                <li><a href="zanichelli.it" target="_blank">Zanichelli</a></li>
+        <li><a href="https://sanoma.it/" target="_blank">Sanoma</a></li>
+        <li><a href="hubscuola.it" target="_blank">HubScuola</a></li>
+        <li><a href="https://deascuola.it/" target="_blank">HubScuola</a></li>
+
+
+
+        
+    </td>
     <td>Contenuto riga 1, colonna 2</td>
   </tr>
   <tr>
