--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <li><a href="https://www.bsmart.it/" target="_blank">Bsmart</a></li>
                 <li><a href="zanichelli.it" target="_blank">Zanichelli</a></li>
         <li><a href="https://sanoma.it/" target="_blank">Sanoma</a></li>
-        <li><a href="hubscuola.it" target="_blank">HubScuola</a></li>
+        <li><a href="https://hubscuola.it" target="_blank">HubScuola</a></li>
         <li><a href="https://deascuola.it/" target="_blank">HubScuola</a></li>
 
 
