--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </td>
     <td>
         <h2>App usate per scuola</h2>
-                <li><a href="https://www.sketchup.com/it" target="_blank">dea scuola</a></li>
+                <li><a href="https://www.sketchup.com/it" target="_blank">sketchup</a></li>
         
         
     </td
