--- a/index.html
+++ b/index.html
@@ -214,7 +214,17 @@
   </tr>
   <tr>
       .
-    <td>Contenuto riga 2, colonna 1</td>
+    <td>
+                <li><a href="https://www.onlygabbyme.it/home" target="_blank">Sito web onlygabbyj</a></li>
+                 <li><a href="https://www.office.com/" target="_blank">Office</a></li>
+                 <li><a href="https://www.github.com" target="_blank">github</a></li>
+                         <li><a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.netflix.com/it/&ved=2ahUKEwjBjs6G1IKFAxWQnf0HHd_gCbAQFnoECAYQAQ&usg=AOvVaw0kVKS-IV8HcXwTn-TavoSo
+" target="_blank">github</a></li>
+        
+
+
+        
+    </td>
     <td>Contenuto riga 2, colonna 2</td>
   </tr>
 </table>
