--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
-          <span id="aggiorna" onclick="location.reload()">⟳</span>
+          <span id="aggiorna" onclick="location.href='/'">⟳</span>
 </button>
     </div>
 </div>
