--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         .miur-bar {
-            background-color: #582C2B;
+            background-color: #00006e;
             color: #fff;
             padding: 10px;
             font-size: 14px;
@@ -36,7 +36,7 @@
         }
 
         header {
-            background-color: #88353A;
+            background-color: #6e6ef0;
             color: #fff;
             padding: 10px 0;
         }
@@ -73,7 +73,7 @@
         }
 
         footer {
-            background-color: #582C2B;
+            background-color: #6e6ef0;
             color: #fff;
             padding: 10px 0;
             width: 100%;
