--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
     </div>
     <div>
         <a href="https://gabbystudios.github.io/Pagina-Globale/" target="_blank">Pagina Globale</a>
-        <span id="aggiorna" onclick="location.href='#'">⟳</span>
     </div>
 </div>
 
@@ -188,7 +187,7 @@
 
         <nav>
             <ul>
-                <li><a href="#" target="_blank">Home</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
             </ul>
         </nav>
     </div>
@@ -198,19 +197,23 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
+        About
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>About</strong> <p>ciao</p>
       </div>
     </div>
   </div>
+
+
+
+    
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
+        Site Model
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -219,10 +222,13 @@
       </div>
     </div>
   </div>
+
+
+    
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
+        How Use
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
