--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>About</strong> <p>ciao</p>
+        <strong>About</strong> Innovarium è la piattaforma che distribuisce risorse web per l'istruzione, con Innovarium si vuole insegnare le basi dell'HTML & CSS.
       </div>
     </div>
   </div>
